fix button layout issue

--- a/src/style.scss
+++ b/src/style.scss
@@ -119,9 +119,16 @@ a.black:hover {
   text-decoration: underline;
 }
 
+.button-group {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 a.button {
   color: $dark-grey;
   text-decoration: none;
+  margin-top: 1em;
+  margin-right: 3em;
 }
 
 button,
